--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/Mework.JPG" alt="EARTH profile picture" class="about-pic-profile" />
+        <img src="./assets/Me1.JPG" alt="EARTH profile picture" class="about-pic-profile" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
@@ -352,12 +352,14 @@
             <button
               class="btn btn-color-2 project-btn"
               onclick="window.open('./assets/smartglove.pdf')"
+              style="background-color: #1877F2; color: white; border: none; padding: 10px 20px; border-radius: 5px;"
             >
               Poster
             </button>
             <button
               class="btn btn-color-2 project-btn"
               onclick="location.href='https://www.figma.com/proto/IOTJ8Grvq5iMXMvfeD3an3/SMART-HEART-SMART-HAND?node-id=13-3&starting-point-node-id=13%3A3&t=AoIMSz5Uwp1LMML8-1'"
+              style="background-color: #1877F2; color: white; border: none; padding: 10px 20px; border-radius: 5px;"
             >
               Demo
             </button>
@@ -427,6 +429,7 @@
             <button
               class="btn btn-color-2 project-btn"
               onclick="location.href='hip.html'"
+              style="background-color: #1877F2; color: white; border: none; padding: 10px 20px; border-radius: 5px;"
             >
               Experience
             </button>
