--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/meheart.JPG" alt="EARTH profile picture" class="about-pic-profile" />
+        
+        <img src="/assets/me1.jpg" alt="EARTH profile picture" class="about-pic-profile" />
+
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
