try2 fix vercel

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        
-        <img src="/assets/me1.jpg" alt="EARTH profile picture" class="about-pic-profile" />
+
+        <img src="/assets/mesmo.PNG" alt="EARTH profile picture" class="about-pic-profile" />
 
       </div>
       <div class="section__text">
