--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-
-        <img src="/assets/mesmo.PNG" alt="EARTH profile picture" class="about-pic-profile" />
-
+        <img src="./assets/Mework.JPG" alt="EARTH profile picture" class="about-pic-profile" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
