--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/Mework.JPG"
+            src="./assets/meheart.JPG"
             alt="Profile picture"
             class="about-pic"
           />
