add phone number

--- a/index.html
+++ b/index.html
@@ -470,6 +470,15 @@
             class="icon contact-icon email-icon"
           />
           <p><a href="mailto:examplemail@gmail.com">nichapatvai@gmail.com</a></p>
+
+          <img
+            src="./assets/phone.png"
+            alt="Phone icon"
+            class="icon contact-icon phone-icon"
+          />
+          <p class="phone-number">0805151542</p>
+
+
         </div>
         <!-- <div class="contact-info-container">
           <img
