add +66 phone number

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
             alt="Phone icon"
             class="icon contact-icon phone-icon"
           />
-          <p class="phone-number">0805151542</p>
+          <p class="phone-number">+66 805151542</p>
 
 
         </div>
